--- a/src/main/resources/com/matteotocci/app/RicetteNutrizionista.fxml
+++ b/src/main/resources/com/matteotocci/app/RicetteNutrizionista.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.shape.Circle?>
 
-<AnchorPane prefHeight="640.0" prefWidth="1000.0" styleClass="main-container" stylesheets="@css/Ricette-Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.Ricette">
+<AnchorPane prefHeight="640.0" prefWidth="1000.0" styleClass="main-container" stylesheets="@css/Ricette-Style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.Ricette">
     <children>
         <HBox prefHeight="100.0" prefWidth="200.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
@@ -33,7 +33,7 @@
                                         <Circle fill="#ffffff" radius="25.0" styleClass="profile-circle" />
                                         <ImageView fitHeight="45.0" fitWidth="45.0" onMouseClicked="#AccessoProfilo" pickOnBounds="true" preserveRatio="true" styleClass="profile-image">
                                             <image>
-                                                <Image url="@immagini/logo-removebg-preview.png" />
+                                                <Image url="@immagini/logo.png" />
                                             </image>
                                         </ImageView>
                                     </children>
@@ -102,7 +102,7 @@
                         <!-- SEZIONE TABELLA -->
                         <VBox styleClass="table-section" VBox.vgrow="ALWAYS">
                             <children>
-                                <TableView fx:id="tableViewRicette" editable="true" prefHeight="390.0" prefWidth="720.0" styleClass="ricette-table" VBox.vgrow="ALWAYS">
+                                <TableView fx:id="tableViewRicette" editable="true" onMouseClicked="#apriDettaglioRicetta" prefHeight="390.0" prefWidth="720.0" styleClass="ricette-table" VBox.vgrow="ALWAYS">
                                     <columns>
                                         <TableColumn fx:id="nomeCol" prefWidth="200.0" styleClass="table-column" text="Nome" />
                                         <TableColumn fx:id="descrizioneCol" prefWidth="400.0" styleClass="table-column" text="Descrizione" />
