--- a/src/main/resources/com/matteotocci/app/bmi.fxml
+++ b/src/main/resources/com/matteotocci/app/bmi.fxml
@@ -12,13 +12,13 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="600.0" prefWidth="400.0" stylesheets="@css/HomePage-Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.BMI">
+<AnchorPane prefHeight="600.0" prefWidth="400.0" styleClass="main-container" stylesheets="@css/HomePage-Style.css" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.BMI">
     <children>
         <VBox alignment="TOP_CENTER" spacing="15.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <Label styleClass="header-label" text="Calcolatore BMI">
+                <Label styleClass="macro-label" text="Calcolatore BMI">
                     <font>
-                        <Font size="24.0" />
+                        <Font name="System Bold" size="24.0" />
                     </font>
                     <VBox.margin>
                         <Insets top="20.0" />
@@ -26,15 +26,15 @@
                 </Label>
                 <HBox alignment="CENTER" spacing="10.0">
                     <children>
-                        <TextField fx:id="altezzaTextField" promptText="Altezza" />
+                        <TextField fx:id="altezzaTextField" promptText="Altezza" styleClass="day-selection-label" />
                     </children>
                 </HBox>
                 <HBox alignment="CENTER" spacing="10.0">
                     <children>
-                        <TextField fx:id="pesoTextField" promptText="Peso" />
+                        <TextField fx:id="pesoTextField" promptText="Peso" styleClass="day-selection-label" />
                     </children>
                 </HBox>
-                <Button onAction="#handleCalcolaBMI" styleClass="calculate-button" text="Calcola BMI">
+                <Button onAction="#handleCalcolaBMI" styleClass="secondary-button" text="Calcola BMI">
                     <font>
                         <Font size="16.0" />
                     </font>
