--- a/src/main/resources/com/matteotocci/app/NuovaDieta.fxml
+++ b/src/main/resources/com/matteotocci/app/NuovaDieta.fxml
@@ -46,7 +46,7 @@
                 <Label fx:id="erroreNumeroGiorniLabel" style="-fx-font-size: 11px;" text="" />
                 <!-- FINE NUOVO BLOCCO -->
 
-                <Button fx:id="avantiButton" onAction="#switchToAggiungiAlimenti" text="Avanti &gt;" />
+                <Button fx:id="avantiButton" onAction="#switchToAggiungiAlimenti" styleClass="button-avanti" text="Avanti &gt;" />
             </children>
             <padding>
                 <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
